--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ nav button {
     display: block;
 }
 
-input[type=text], input[type=number] {
+input[type=text], input[type=number], select {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
@@ -40,6 +40,7 @@ button {
     color: white;
     border: none;
     border-radius: 3px;
+    cursor: pointer;
 }
 
 button:hover {
